# teacher

./: README.md  pubspec.yaml
android/: build.gradle  gradle.properties  key.properties  local.properties
android/app/: CMakeLists.txt  build.gradle
android/app/key/: key.txt  teacher.jks
android/app/libs/: avmoudle_aar-release.aar  liboboe-release.aar  videochat_aar-release.aar
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/platformchannel/: FApp.java  MainActivity.java  UpdateCallback.java  UpdateManager.java  videochatJobService.java  videochatService.java
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-zh/: strings.xml
android/app/teacher/release/: output.json
android/channel_config/: groupAll.json
android/channel_config/channels/: teacher.json
android/gradle/wrapper/: gradle-wrapper.properties
assets/sdb/: lastver_teacher.xml  system_teacher.sdb
assets/sdb/teacher/: teacher_address.sdb  teacher_config.sdb
ios/: Podfile
ios/Runner/: AppDelegate.m  CppPlugin.mm  GeneratedPluginRegistrant.m  Info.plist  swift.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  mainpage.dart
lib/page/: test_page.dart
lib/page/class_page/: class_page.dart
lib/page/common/: ImgVideoHelper.dart  audio_player.dart  audio_record.dart  common_func.dart  common_param.dart  full_play.dart  opration_file.dart  scan_camera_dialog.dart  scan_dialog.dart
lib/page/green_review_page/: green_details_page.dart  green_input_page.dart  green_pick.dart  green_review_page.dart  green_search_page.dart  green_upload.dart
lib/page/home_page/: assignment_page.dart  comment_homework_page.dart  homepage.dart  homework_content_page.dart  homework_details_page.dart  homework_mgr_page.dart  select_student_page.dart  select_subject_page.dart
lib/page/login_page/: login_page.dart  splash_page.dart
lib/page/model/: file_model.dart  grade_class_model.dart  green_details.model.dart  green_input_model.dart  green_review_model.dart  homeword_details_model.dart  homework_model.dart  student_homework_model.dart
lib/page/my_page/: my_modify_pwd_page.dart  my_set_page.dart  mypage.dart
lib/page/provider/: file_provider.dart  grade_class_provider.dart  green_details_provider.dart  green_input_provider.dart  green_review_provider.dart  home_provider.dart  homework_provider.dart  (+3 more)
(+1 files in other folders)
